Minor changes in yml file.

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -2,12 +2,12 @@ name: Deploy portfolio
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -22,10 +22,11 @@ jobs:
 
       - name: Zip build output
         run: |
-          zip -r release.zip .next package.json package-lock.json public
+          zip -r release.zip .next node_modules package.json package-lock.json public
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: ps-portfolio
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH }}
+          package: release.zip
