--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# Email Configuration (for contact form)
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+# SendGrid Configuration (for contact form)
+SENDGRID_API_KEY=your-sendgrid-api-key
+SENDGRID_FROM_EMAIL=your-verified-sender@example.com
 EMAIL_TO=pankajshah2941999@gmail.com
 
 # OpenAI API (for chatbot - optional)
