--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "framer-motion": "^12.0.0",
-    "nodemailer": "^6.9.17"
+    "@sendgrid/mail": "^8.1.4"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
-    "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18.3.12",
+"@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "typescript": "^5.7.2"
   }
