--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/nextjs-registry": "^1.0.1",
-    "antd": "^5.22.6",
-    "next": "^15.1.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "@ant-design/cssinjs": "^2.1.0",
+    "@ant-design/nextjs-registry": "^1.3.0",
+    "@sendgrid/mail": "^8.1.4",
+    "antd": "^6.3.0",
     "framer-motion": "^12.0.0",
-    "@sendgrid/mail": "^8.1.4"
+    "next": "^15.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
-"@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "typescript": "^5.7.2"
   }
 }
