Migrate to Azure Static Web Apps with Azure Functions API
- Switch Next.js to static export (output: 'export', unoptimized images)
- Replace Next.js API route with Azure Function for contact form (api/contact)
- Fix SWA workflow: output_location → "out", api_location → "api"
- Update deploy workflow to manual trigger only
- Add api/local.settings.json to .gitignore
- Update years of experience to 3.3+

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,9 +1,6 @@
 name: Deploy portfolio
 
 on:
-  push:
-    branches:
-      - master
   workflow_dispatch:
 
 jobs:
@@ -13,6 +10,7 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+        refs: main
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
