Fix: correct syntax for checkout step in Azure deploy workflow.

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -10,7 +10,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        refs: main
+        with:
+          ref: main
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
